[gd_scene load_steps=4 format=3 uid="uid://b0p8pywfn0ky2"]

[ext_resource type="Texture2D" uid="uid://cimmf56wr1tb8" path="res://Sprites/Menu.png" id="1_5072g"]
[ext_resource type="Script" path="res://Shop_Menu.gd" id="2_54nkq"]
[ext_resource type="Texture2D" uid="uid://dvccg8swn1bsn" path="res://Sprites/Cursor.png" id="3_sb6ea"]

[node name="Shop_Menu" type="Sprite2D"]
texture = ExtResource("1_5072g")
script = ExtResource("2_54nkq")

[node name="Day_Label" type="Label" parent="."]
offset_left = -158.0
offset_top = -247.0
offset_right = -118.0
offset_bottom = -203.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 32
text = "1"
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="."]
offset_left = -75.0
offset_top = -247.0
offset_right = 246.0
offset_bottom = -130.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Description"
autowrap_mode = 2

[node name="Cost_Label_1" type="Label" parent="."]
offset_left = -104.0
offset_top = -51.0
offset_right = 19.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Cost:
L + Ratio
Level: MAX"
autowrap_mode = 2

[node name="Cost_Label_2" type="Label" parent="."]
offset_left = 141.0
offset_top = -51.0
offset_right = 247.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Cost:
L + Ratio
Level: MAX"
autowrap_mode = 2

[node name="Cost_Label_3" type="Label" parent="."]
offset_left = -104.0
offset_top = 100.0
offset_right = 18.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Cost:
L + Ratio
Level: 99"
autowrap_mode = 2

[node name="Cost_Label_4" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.0332031
offset_left = 141.0
offset_top = 100.0
offset_right = 235.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Cost:
L + Ratio
Level: 100"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Cash_Profit" type="Label" parent="."]
offset_left = -239.0
offset_top = -178.0
offset_right = -78.0
offset_bottom = -133.0
theme_override_colors/font_color = Color(0.745098, 0.682353, 0, 1)
theme_override_font_sizes/font_size = 20
text = "100000000"
autowrap_mode = 2

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(136, 232)
texture = ExtResource("3_sb6ea")
